too much(fix printer size,fix dz a5,fix template size,fix language,edit prescription details,add print notification,fix design,add icons to all stages,remove old stage loading method and make new one,add title to each stage,add launcher class..)