@@ -43,6 +43,7 @@ javafx {
 run {
     run {
         jvmArgs = [
+                '--add-exports=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED',
                 '--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED',
                 '--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED',
                 '--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED',
@@ -50,4 +51,4 @@ run {
                 '--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED',
         ]    }
 }
-mainClassName = 'dr.Main'
+mainClassName = 'dr.Launcher'
